--- a/src/components/News/News.scss
+++ b/src/components/News/News.scss
@@ -1,7 +1,7 @@
 .newsContainer {
     background-color: #445a64;
     min-height: calc(100vh - 4.5rem);
-    width: 100vw;
+    max-width: 400px;
     h3 {
         color: white;
         font-weight: 400;
@@ -71,5 +71,4 @@
             padding: 0;
         } 
     }
-    
 }
