--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 body {
   margin: 0;
-  padding-top: 4.5rem;
+  padding: 4.5rem 0 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
