--- a/src/components/Activities/activities.scss
+++ b/src/components/Activities/activities.scss
@@ -1,6 +1,7 @@
 .activityContainer {
     background-color: #445a64;
     min-height: calc(100vh - 4.5rem);
+    width: 100vw;
     max-width: 400px;
     h3 {
         color: white;
@@ -71,6 +72,7 @@
 .activityInfo {
     background-color: #445a64;
     min-height: calc(100vh - 4.5rem);
+    width: 100vw;
     max-width: 400px;
     h3 {
         color: white;
