--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -2,6 +2,7 @@
     background-color: #445a64;
     min-height: calc(100vh - 4.5rem);
     max-width: 400px;
+    width: 100vw;
     h3 {
         color: white;
         font-weight: 400;
