--- a/src/components/Team/Team.scss
+++ b/src/components/Team/Team.scss
@@ -1,6 +1,7 @@
 .teamContainer {
     background-color: #445a64;
     min-height: calc(100vh - 4.5rem);
+    width: 100vw;
     max-width: 400px;
     h3 {
         color: white;
