--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,8 @@ body {
   margin: 0;
   padding: 4.5rem 0 0 0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: center;
+  width: 100vw;
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
